# cicada-distributed

./: .env  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  bandit.yaml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: dev.yml  main-test.yml  pre-release-docker.yml  pre-release-pypi.yml  pre-release-test.yml  pre-release.yml  push.yml  release-docker.yml  release-pypi.yml
backend/: .gitignore  Dockerfile  Makefile  go.mod  go.sum  main.go
backend/api/: backend.pb.go  backend_grpc.pb.go
backend/cmd/: server.go
backend/pkg/application/: backend.go
backend/pkg/badgercommands/: client.go  client_test.go
backend/pkg/datastore/: datastore_test.go  memorydatastore.go  redisdatastore.go
backend/pkg/rediscommands/: client.go
backend/pkg/scheduling/: docker.go  kube.go  local.go  util.go
backend/pkg/types/: errors.go
cicadad/core/: cli.py  commands.py  containers.py  decorators.py  engine.py  runners.py  scenario.py  types.py
cicadad/metrics/: collectors.py  console.py
cicadad/protos/: backend.proto  backend_pb2.py  backend_pb2_grpc.py
cicadad/services/: backend.py
cicadad/templates/: Dockerfile  backend.yaml  dev.dockerfile  local.dockerfile  redis.yaml  test.py
cicadad/util/: console.py  constants.py  context.py
container-service/: Dockerfile  Makefile  go.mod  go.sum  main.go
container-service/api/: container_service.pb.go  container_service.proto  container_service_grpc.pb.go
container-service/cmd/: handler.go  server.go
container-service/pkg/: docker.go  kube.go
datastore-client/: Dockerfile  Makefile  go.mod  go.sum  main.go
datastore-client/api/: datastore.pb.go  datastore.proto  datastore_grpc.pb.go
datastore-client/cmd/: server.go
datastore-client/pkg/: datastore.go  datastore_test.go
datastore-client/pkg/datastore/: datastore.go  datastore_test.go
datastore-client/pkg/rediscommands/: client.go
demos/rest-api/app/: Dockerfile  V1__Users.sql  docker-compose.yml  grafana.ini  main.py  prometheus.yml  requirements.txt
demos/rest-api/integration-tests/: Dockerfile  example.py  test.py  util.py
demos/rest-api/load-test/: test.py
demos/rest-api/stress-test/: test.py
dockerfiles/: base-image.dev-a.dockerfile  base-image.dev-b.dockerfile  base-image.dev.dockerfile  base-image.dockerfile  base-image.local.dockerfile  base-image.pre-release.dockerfile  manager.dev-a.dockerfile  manager.dev-b.dockerfile  manager.dev.dockerfile  manager.dockerfile  manager.local..dockerfile  manager.local.dockerfile
docs/: release-guide.md
integration-test/: test.py
kube-cluster/base/: cicada-distributed.yaml  kustomization.yaml
kube-cluster/overlays/local/: kustomization.yaml  patch.yaml
src/cicadad/configs/: redis.conf
src/cicadad/core/: cli.py  commands.py  containers.py  decorators.py  engine.py  runners.py  scenario.py  types.py
src/cicadad/metrics/: console.py
src/cicadad/protos/: backend.proto  backend_pb2.py  backend_pb2_grpc.py  container_service.proto  container_service_pb2.py  container_service_pb2_grpc.py  datastore.proto  datastore_pb2.py  datastore_pb2_grpc.py  hub.proto  hub_pb2.py  hub_pb2_grpc.py
src/cicadad/server/: hub.py  manager.py
src/cicadad/services/: backend.py  container_service.py  datastore.py  eventing.py
src/cicadad/templates/: Dockerfile  backend.yaml  container-service.yaml  datastore-client.yaml  job.yaml  redis.yaml
src/cicadad/util/: backoff.py  console.py  constants.py  context.py  printing.py
tests/core/: test_commands.py  test_decorators.py  test_runners.py
tests/util/: test_context.py
(+8 files in other folders)
