[metadata]
name = cicadad
version = 1.1.0
author = Jeremy Herzog
author_email = jeremyaherzog@gmail.com
description = Library for running distributed Cicada tests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    docker
    click
    pydantic
    kafka-python
    grpcio
    protobuf
    blessed

[options.entry_points]
console_scripts = cicada-distributed = cicadad.core.cli:cli

[options.packages.find]
where = src

[flake8]
max-line-length = 120
exclude = src/cicadad/protos
# FEATURE: test docs, docstrings

[mypy]
python_version = 3.6
exclude = src/cicadad/protos
