[metadata]
name = cicadad
version = 1.7.0
author = Jeremy Herzog
author_email = jeremyaherzog@gmail.com
description = Library for running distributed Cicada tests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cicadatesting/cicada-distributed
project_urls =
    Bug Tracker = https://github.com/cicadatesting/cicada-distributed/issues
    Docsite = https://cicadatesting.github.io/cicada-distributed-docs/
    Demos = https://github.com/cicadatesting/cicada-distributed-demos
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
# package_dir =
#     = cicadad
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    docker>=5.0.3
    click>=8.0.4
    configobj>=5.0.6
    pydantic>=1.9.0
    grpcio>=1.44.0
    protobuf>=3.19.4
    blessed>=1.19.1
    dask>=2020.1.0
    distributed>=2020.1.0
    rich>=11.2.0

[options.entry_points]
console_scripts =
    cicada-distributed = cicadad.core.cli:cli

# [options.packages.find]
# where = cicadad

[flake8]
max-line-length = 120
exclude = cicadad/protos/*

[mypy]
python_version = 3.6
follow_imports = silent
ignore_missing_imports = true
# disallow_untyped_defs = True
exclude = protos/
